[package]
name = "pi_sinfo"
version = "0.1.0"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "It is used to describe the 'structure', that is, the meta information of the structure"
repository = "https://github.com/GaiaWorld/pi_sinfo.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "pi_sinfo"]

[dependencies]
pi_atom = "0.1"
pi_bon = "0.1"